# NFSmartPlayer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  NFSmartPlayer.pxm  README.md  SCRIPTING.md
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md
ci/: Dockerfile  README.md  androidlinux.py  androidosx.py  ci.yaml  ios.py  linux.py  linux.sh  nfbuild.py  nfbuildlinux.py  nfbuildosx.py  osx.py  osx.sh  requirements.txt  validate_logging.py
include/NFSmartPlayer/: CallbackTypes.h  Client.h  Content.h  Edge.h  ErrorCode.h  Factory.h  GlobalLogger.h  Graph.h  Node.h  Plugin.h  Registry.h  Script.h  nf_smart_player.h
interfaces/: CMakeLists.txt  NFSmartPlayer.i
interfaces/csharp/: CMakeLists.txt
interfaces/java/: CMakeLists.txt  Player.cpp
interfaces/java/com/spotify/nativeformat/: DriverType.java  MessageType.java  NativeUtils.java  OSValidator.java  Player.java  PlayerListener.java
interfaces/objc/: CMakeLists.txt  NFSmartPlayerEdge+Private.h  NFSmartPlayerEdge.m  NFSmartPlayerGraph+Private.h  NFSmartPlayerGraph.m  NFSmartPlayerNode+Private.h  NFSmartPlayerNode.m  NFSmartPlayerObjC.m  NFSmartPlayerParam+Private.h  NFSmartPlayerParam.m  NFSmartPlayerScript+Private.h  NFSmartPlayerScript.m  check-lib-pre.sh
interfaces/objc/include/NFSmartPlayerObjC/: NFSmartPlayerEdge.h  NFSmartPlayerGraph.h  NFSmartPlayerNode.h  NFSmartPlayerObjC.h  NFSmartPlayerParam.h  NFSmartPlayerScript.h
interfaces/objc/tests/: CMakeLists.txt  NFSmartPlayerGraphDelegateMock.h  NFSmartPlayerGraphDelegateMock.m  NFSmartPlayerGraphTest.mm  NFSmartPlayerObjCDelegateMock.h  NFSmartPlayerObjCDelegateMock.m  NFSmartPlayerObjCTest.mm  NFSmartPlayerObjCTestRunner.cpp
interfaces/python/: CMakeLists.txt
libraries/: CMakeLists.txt
resources/: compand-sine.json  compress-expand-sine.json  compress-mb.json  compress-sine.json  ogg-graph.json  ogg-loop-4x.json  scripting.json  sidechain-sine-delayed-sidechain.json  sidechain-sine.json  sine-bpf.json
resources/nf-logging/expected/: example2.json  loop-graph.json  simple-graph.json  stretch-graph.json
source/: Authoriser.h  CMakeLists.txt  CallbackTypes.cpp  Client.cpp  ClientImplementation.cpp  ClientImplementation.h  Edge.cpp  EdgeImplementation.cpp  EdgeImplementation.h  ErrorCode.cpp  GlobalLogger.cpp  Graph.cpp  GraphDelegate.h  GraphImplementation.cpp  GraphImplementation.h  HTTPLogSink.cpp  HTTPLogSink.h  Limiter.cpp  Limiter.h  MixerPlugin.cpp  MixerPlugin.h  NFOSCHandler.cpp  NFOSCHandler.h  Node.cpp  NodeImplementation.cpp  NodeImplementation.h  Notification.cpp  Notification.h  Player.cpp  Player.h  README.md  Registry.cpp  ScriptDelegate.h  ScriptImplementation.cpp  ScriptImplementation.h  nf_smart_player.cpp
source/cli/: CMakeLists.txt  main.cpp
source/plugins/: CMakeLists.txt
source/plugins/channel/: CMakeLists.txt  ChannelPlugin.cpp  ChannelPlugin.h  PluginFactory.cpp  PluginFactory.h  README.md
source/plugins/channel/tests/: CMakeLists.txt  ChannelPluginTest.cpp  ChannelPluginTestRunner.cpp
source/plugins/compressor/: CMakeLists.txt  CompanderPlugin.cpp  CompanderPlugin.h  CompressorPlugin.cpp  CompressorPlugin.h  CompressorPluginFactory.cpp  CompressorPluginFactory.h  Detector.h  Drc.h  ExpanderPlugin.cpp  ExpanderPlugin.h  Knee.h  PeakDetector.h  README.md  RmsDetector.h  types.h
source/plugins/compressor/tests/: CMakeLists.txt  CompressorPluginTest.cpp  CompressorPluginTestRunner.cpp
source/plugins/eq/: CMakeLists.txt  EQPlugin.cpp  EQPlugin.h  EQPluginFactory.cpp  EQPluginFactory.h  FilterPlugin.cpp  FilterPlugin.h  README.md
source/plugins/eq/tests/: CMakeLists.txt  EQPluginTest.cpp  EQPluginTestRunner.cpp
source/plugins/file/: CMakeLists.txt  FilePlugin.cpp  FilePlugin.h  FilePluginFactory.cpp  FilePluginFactory.h  README.md
source/plugins/file/tests/: CMakeLists.txt  FilePluginTestRunner.cpp
source/plugins/noise/: CMakeLists.txt  NoisePlugin.cpp  NoisePlugin.h  NoisePluginFactory.cpp  NoisePluginFactory.h  README.md  SilencePlugin.cpp  SilencePlugin.h
source/plugins/noise/tests/: CMakeLists.txt  NoisePluginTest.cpp  NoisePluginTestRunner.cpp
source/plugins/time/: CMakeLists.txt  LoopPlugin.cpp  LoopPlugin.h  README.md  StretchPlugin.cpp  StretchPlugin.h  TimePluginFactory.cpp  TimePluginFactory.h
source/plugins/time/tests/: CMakeLists.txt  LoopPluginTest.cpp  TimePluginTestRunner.cpp
source/plugins/util/: BandSplitter.cpp  BandSplitter.h  ButterFilter.cpp  ButterFilter.h  CMakeLists.txt
source/plugins/util/tests/: CMakeLists.txt  PluginUtilTestRunner.cpp  PluginUtilTests.cpp
source/plugins/waa/: CMakeLists.txt  DelayPlugin.cpp  DelayPlugin.h  GainPlugin.cpp  GainPlugin.h  README.md  ReverbAccumulationBuffer.cpp  ReverbAccumulationBuffer.h  WAAPluginFactory.cpp  WAAPluginFactory.h
source/plugins/waa/tests/: CMakeLists.txt  DelayPluginTest.cpp  GainPluginTest.cpp  WAAPluginTestRunner.cpp
source/plugins/wave/: CMakeLists.txt  README.md  SineWavePlugin.cpp  SineWavePlugin.h  WavePluginFactory.cpp  WavePluginFactory.h
source/plugins/wave/tests/: CMakeLists.txt  SineWavePluginTest.cpp  WavePluginTestRunner.cpp
source/tests/: CMakeLists.txt  CallbackTypesTest.cpp  ClientImplementationTest.cpp  ClientTest.cpp  EdgeImplementationTest.cpp  EdgeTest.cpp  ErrorCodeTest.cpp  GraphImplementationTest.cpp  GraphTest.cpp  NFSmartPlayerTestRunner.cpp  nf_smart_player_test.cpp
tools/: generate-integration-audio.py  generate-version.py
